--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,11 +31,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CaneProject">
         <activity
-            android:name=".HardWareConnection"
+            android:name=".activities.HardWareConnection"
             android:screenOrientation="portrait"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
