--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,4 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 android.enableJetifier=true
 android.useAndroidX=true
+android.injected.testOnly=false
