now its getting data but the socket not closing properly

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ android {
     lint {
         checkReleaseBuilds false
     }
+    namespace 'com.caneproject'
 }
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
