--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.caneproject">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- for Android 11 and lower -->
     <uses-permission
         android:name="android.permission.BLUETOOTH"
