--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -34,6 +35,7 @@ android {
         }
     }
     compileOptions {
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -48,7 +50,17 @@ android {
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 dependencies {
+    // Amplify core dependency
+    implementation 'com.amplifyframework:core:1.35.4'
+
+    // Support for Java 8 features
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+    // Import the Firebase BoM
+    implementation platform('com.google.firebase:firebase-bom:30.1.0')
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-firestore'
     implementation 'androidx.room:room-ktx:2.4.2'
+    implementation 'com.google.firebase:firebase-storage:19.1.1'
     kapt "androidx.room:room-compiler:2.4.2"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
@@ -57,6 +69,7 @@ dependencies {
     implementation "androidx.room:room-runtime:2.5.0-alpha01"
     kapt "androidx.room:room-compiler:2.5.0-alpha01"
     def room_version = "2.4.2"
+    implementation "androidx.core:core-ktx:1.7.0"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     // optional - RxJava2 support for Room
