--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,12 @@
+buildscript {
+    dependencies {
+        classpath 'com.google.gms:google-services:4.3.3'
+    }
+}
+
 plugins {
-    id 'com.android.application' version '7.2.0' apply false
-    id 'com.android.library' version '7.2.0' apply false
+    id 'com.android.application' version '7.2.1' apply false
+    id 'com.android.library' version '7.2.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
 }
 
