--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,7 +77,7 @@ dependencies {
 
     // optional - RxJava3 support for Room
     implementation "androidx.room:room-rxjava3:$room_version"
-
+    implementation 'com.google.code.gson:gson:2.9.0'
     // optional - Guava support for Room, including Optional and ListenableFuture
     implementation "androidx.room:room-guava:$room_version"
 
