--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,10 @@ plugins {
 }
 
 android {
+    defaultConfig {
+        versionCode = 6
+        versionName = "1.1.2"
+    }
     compileSdk 31
     buildFeatures {
         viewBinding  true
