add exoPLayer to the project and every 3 color has its own song when detected via modulo

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -118,4 +118,5 @@ dependencies {
     implementation 'com.github.wwdablu:SimplyPDF:2.0.0'
     implementation "androidx.camera:camera-view:${camerax_version}"
     implementation "androidx.camera:camera-extensions:${camerax_version}"
+    implementation 'com.google.android.exoplayer:exoplayer:2.18.1'
 }
