--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,14 +9,14 @@ android {
         versionCode = 6
         versionName = "1.1.2"
     }
-    compileSdk 31
+    compileSdk 32
     buildFeatures {
-        viewBinding  true
+        viewBinding true
     }
     defaultConfig {
         applicationId "com.caneproject"
         minSdk 23
-        targetSdk 31
+        targetSdk 32
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -58,22 +58,17 @@ dependencies {
     implementation 'com.amplifyframework:core:1.35.4'
 
     // Support for Java 8 features
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
-    // Import the Firebase BoM
-    implementation platform('com.google.firebase:firebase-bom:30.1.0')
-    implementation 'com.google.firebase:firebase-auth'
-    implementation 'com.google.firebase:firebase-firestore'
-    implementation 'androidx.room:room-ktx:2.4.2'
-    implementation 'com.google.firebase:firebase-storage:19.1.1'
-    kapt "androidx.room:room-compiler:2.4.2"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.0'
+    implementation 'androidx.room:room-ktx:2.4.3'
+    kapt "androidx.room:room-compiler:2.4.3"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
     //noinspection LifecycleAnnotationProcessorWithJava8
-    kapt "androidx.lifecycle:lifecycle-compiler:2.5.0-beta01"
-    implementation "androidx.room:room-runtime:2.5.0-alpha01"
-    kapt "androidx.room:room-compiler:2.5.0-alpha01"
-    def room_version = "2.4.2"
-    implementation "androidx.core:core-ktx:1.7.0"
+    kapt "androidx.lifecycle:lifecycle-compiler:2.6.0-alpha01"
+    implementation "androidx.room:room-runtime:2.5.0-alpha02"
+    kapt "androidx.room:room-compiler:2.5.0-alpha02"
+    def room_version = "2.4.3"
+    implementation "androidx.core:core-ktx:1.8.0"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     // optional - RxJava2 support for Room
@@ -89,28 +84,28 @@ dependencies {
     testImplementation "androidx.room:room-testing:$room_version"
 
     // optional - Paging 3 Integration
-    implementation "androidx.room:room-paging:2.5.0-alpha01"
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
-    implementation("com.github.bumptech.glide:glide:4.11.0") {
+    implementation "androidx.room:room-paging:2.5.0-alpha02"
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.1'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.1'
+    implementation("com.github.bumptech.glide:glide:4.13.2") {
         exclude group: "com.android.support"
     }
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation fileTree(dir: 'C:\\Users\\amins\\StudioProjects\\CaneProject\\app\\libs', include: ['*.aar', '*.jar'], exclude: [])
     def appCenterSdkVersion = '4.3.1'
     implementation "com.microsoft.appcenter:appcenter-analytics:${appCenterSdkVersion}"
     implementation "com.microsoft.appcenter:appcenter-crashes:${appCenterSdkVersion}"
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.appcompat:appcompat:1.5.0'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.github.Dhaval2404:ColorPicker:2.3'
-    def camerax_version = "1.1.0-beta03"
+    def camerax_version = "1.2.0-alpha04"
     implementation "androidx.camera:camera-core:${camerax_version}"
     implementation "androidx.camera:camera-camera2:${camerax_version}"
     implementation "androidx.camera:camera-lifecycle:${camerax_version}"
@@ -119,4 +114,5 @@ dependencies {
     implementation "androidx.camera:camera-view:${camerax_version}"
     implementation "androidx.camera:camera-extensions:${camerax_version}"
     implementation 'com.google.android.exoplayer:exoplayer:2.18.1'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.9.1'
 }
