--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,9 @@ apply plugin: 'kotlin-kapt'
 dependencies {
     // Amplify core dependency
     implementation 'com.amplifyframework:core:1.35.4'
+    implementation 'androidx.annotation:annotation:1.4.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
 
     // Support for Java 8 features
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.0'
@@ -115,4 +118,5 @@ dependencies {
     implementation "androidx.camera:camera-extensions:${camerax_version}"
     implementation 'com.google.android.exoplayer:exoplayer:2.18.1'
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.9.1'
+    implementation 'com.airbnb.android:lottie:5.2.0'
 }
